--- a/styles/styles.css
+++ b/styles/styles.css
@@ -174,6 +174,8 @@ section {
     height: 400px;
     width: 400px;
     margin: auto 0;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 50%;
 }
 
 .section__text {
@@ -227,6 +229,7 @@ section {
     width: 8rem;
     border-radius: 2rem;
     transition: all 300ms ease;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
 }
 
 .btn-color-1,
