--- a/styles/styles.css
+++ b/styles/styles.css
@@ -174,13 +174,12 @@ section {
     height: 300px;
     width: 300px;
     margin: auto 0;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
 }
 
 .profile-pic-rounded {
     border-radius: 50%;
     object-fit: fill;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .section__text {
@@ -275,6 +274,9 @@ section {
     display: flex;
 }
 
+.about-pic {
+    border-radius: 2rem;
+}
 
 .arrow {
     position: absolute;
@@ -301,4 +303,43 @@ section {
     height: 350px;
     width: 350px;
     margin: auto 0;
+}
+
+/* Experience Section */
+
+#experience {
+    position: relative;
+}
+
+.experience-sub-title {
+    color: rgb(85, 85, 85);
+    font-weight: 600;
+    font-size: 1.75rem;
+    margin-bottom: 2rem;
+}
+
+.experience-details-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.article-container {
+    display: flex;
+    text-align: initial;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 2.5rem;
+    justify-content: space-around;
+}
+
+.articel {
+    display: flex;
+    width: 10rem;
+    justify-content: space-around;
+    gap: 0.5rem;
+}
+
+.article .icon {
+    cursor: pointer;
 }
