--- a/styles/styles.css
+++ b/styles/styles.css
@@ -400,3 +400,14 @@ section {
 .contact-info-container .icon {
     cursor: default;
 }
+
+/*Footer Section*/
+
+footer {
+    height: 26vh;
+    margin: 0 1rem;
+}
+
+footer p {
+    text-align: center;
+}
