--- a/styles/styles.css
+++ b/styles/styles.css
@@ -358,6 +358,7 @@ section {
     border-radius: 2rem;
     width: 90%;
     height: 90%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 .project-title {
@@ -409,4 +410,8 @@ footer {
 
 footer p {
     text-align: center;
+}
+
+.about-text {
+    text-align: justify;
 }
