--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,7 +7,20 @@
     padding: 0;
 }
 
+:root {
+    --primary-color: white;
+    --secondary-color: black;
+    --font-color: rgb(85, 85, 85);
+}
+
+.dark-theme {
+    --primary-color: black;
+    --secondary-color: white;
+    --font-color: rgb(250, 250, 250);
+}
+
 body {
+    background: var(var(--primary-color));
     font-family: "Poppins", sans-serif;
 }
 
@@ -16,7 +29,7 @@ html {
 }
 
 p {
-    color: rgb(85, 85, 85);
+    color: var(--font-color);
 }
 
 /* TRANSITION */
@@ -46,13 +59,13 @@ nav {
 }
 
 a {
-    color: black;
+    color: var(--secondary-color);
     text-decoration: none;
-    text-decoration-color: white;
+    text-decoration-color: var(--primary-color);
 }
 
 a:hover {
-    color: grey;
+    color: var(--font-color);
     text-decoration: underline;
     text-underline-offset: 1rem;
     text-decoration-color: rgb(181, 181, 181);
@@ -89,7 +102,7 @@ a:hover {
 .hamburger-icon span {
     width: 100%;
     height: 2px;
-    background-color: black;
+    background-color: var(--secondary-color);
     transition: all 0.3s ease-in-out;
 }
 
@@ -97,7 +110,7 @@ a:hover {
     position: absolute;
     top: 100%;
     right: 0;
-    background-color: white;
+    background-color: var(--primary-color);
     width: fit-content;
     max-height: 0;
     overflow: hidden;
@@ -109,7 +122,7 @@ a:hover {
     padding: 10px;
     text-align: center;
     font-size: 1.5rem;
-    color: black;
+    color: varvar(--secondary-color);
     text-decoration: none;
     transition: all 0.3s ease-in-out;
 }
@@ -237,17 +250,17 @@ section {
 
 .btn-color-1,
 .btn-color-2 {
-    color: white;
-    background-color: black;
+    color: var(--primary-color);
+    background-color: var(--secondary-color);
     border: none;
-    border: 0.1rem solid rgb(0, 0, 0);
+    border: 0.1rem solid var(--secondary-color);
 }
 
 .btn-color-1:hover,
 .btn-color-2:hover {
     border: 0.1rem solid rgb(52, 52, 52);
-    color: black;
-    background-color: white;
+    color: var(--secondary-color);
+    background-color: var(--primary-color);
     cursor: pointer;
 }
 
@@ -311,7 +324,7 @@ section {
 }
 
 .experience-sub-title {
-    color: rgb(85, 85, 85);
+    color: var(--font-color);
     font-weight: 600;
     font-size: 1.75rem;
     margin-bottom: 2rem;
@@ -363,7 +376,7 @@ section {
 
 .project-title {
     margin: 1rem;
-    color: black;
+    color: var(--secondary-color);
 }
 
 /* Contact Section */
