--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,16 +11,18 @@
     --primary-color: white;
     --secondary-color: black;
     --font-color: rgb(85, 85, 85);
+    --card-primary: white;
 }
 
 .dark-theme {
     --primary-color: black;
     --secondary-color: white;
-    --font-color: rgb(250, 250, 250);
+    --font-color: rgb(255, 255, 255);
+    --card-primary: rgb(255, 193, 85);
 }
 
 body {
-    background: var(var(--primary-color));
+    background: var(--primary-color);
     font-family: "Poppins", sans-serif;
 }
 
@@ -79,6 +81,7 @@ a:hover {
 .logo {
     margin-left: 100px;
     font-size: 2rem;
+    color: var(--secondary-color)
 }
 
 .logo:hover {
@@ -169,6 +172,7 @@ a:hover {
 /*Dark Icon*/
 .dark-icon {
     height: 30px;
+    cursor: pointer;
 }
 
 /* Sections */
@@ -225,6 +229,7 @@ section {
 }
 
 .title {
+    color: var(--secondary-color);
     font-size: 3rem;
     text-align: center;
 }
@@ -311,7 +316,8 @@ section {
 .details-container {
     padding: 1.5rem;
     flex: 1;
-    background: white;
+    background: var(--primary-color);
+    color: var(--secondary-color);
     border-radius: 2rem;
     border: rgb(53, 53, 53) 0.1rem solid;
     border-color: rgb(163, 163, 163);
@@ -336,7 +342,7 @@ section {
 }
 
 .experience-sub-title {
-    color: var(--font-color);
+    /* color: var(--font-color); */
     font-weight: 600;
     font-size: 1.75rem;
     margin-bottom: 2rem;
@@ -376,7 +382,7 @@ section {
 
 .color-container {
     border-color: rgb(163, 163, 163);
-    background: rgb(250, 250, 250);
+    background: var(--primary-color);
 }
 
 .project-img {
@@ -405,7 +411,7 @@ section {
     justify-content: center;
     border-radius: 2rem;
     border: rgb(163, 163, 163) 0.1rem solid;
-    background: rgb(250, 250, 250);
+    background: var(--primary-color);
     margin: 2rem auto;
     padding: 0.5rem;
 }
